--- a/images.html
+++ b/images.html
@@ -12,7 +12,7 @@
 		<nav>
 			<ul>
 				<li> <a href="Home.html"> Home </a> </li>
-				<li> <a href="Background.html"> Background </a> </li>
+				<li> <a href="sporo13.github.io/home.html"> Background </a> </li>
 				<li> <a href=".html"> How to get </a> </li>
 				<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 			</ul>
