--- a/background.html
+++ b/background.html
@@ -12,9 +12,9 @@
 	<h1><center>Bcakground</center></h1>
 		<nav>
 			<ul>
-				<li> <a href="Home.html"> Home </a> </li>
-				<li> <a href="Background.html"> Background </a> </li>
-				<li> <a href="part1.html"> How to get </a> </li>
+				<li> <a href="https://sporo13.github.io/home.html"> Home </a> </li>
+				<li> <a href="https://sporo13.github.io/background.html"> Background </a> </li>
+				<li> <a href=""> How to get </a> </li>
 				<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 			</ul>
 		</nav>
