--- a/images.html
+++ b/images.html
@@ -11,8 +11,8 @@
 	<h2><center>Every choice has consequences</center></h2>
 		<nav>
 			<ul>
-				<li> <a href="Home.html"> Home </a> </li>
-				<li> <a href="sporo13.github.io/background.html"> Background </a> </li>
+				<li> <a href="https://sporo13.github.io/home.html"> Home </a> </li>
+				<li> <a href="https://sporo13.github.io/background.html"> Background </a> </li>
 				<li> <a href=".html"> How to get </a> </li>
 				<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 			</ul>
