--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 	<h2><center>Every choice has consequences</center></h2>
 		<nav>
 			<ul>
-				<li> <a href="https://sporo13.github.io/home.html"> Home </a> </li>
+				<li> <a href="https://sporo13.github.io/image.html"> Home </a> </li>
 				<li> <a href="https://sporo13.github.io/background.html"> Background </a> </li>
 				<li> <a href=".html"> How to get </a> </li>
 				<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
